--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "react-tabs": "^3.1.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "install": "npm install react",
+    "install": "npm install axios react-dom react-router-dom-react-scripts",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
