--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "^3.4.1"
   },
   "scripts": {
-    "install": "npm install axios react-dom react-router-dom-react-scripts",
+    "install": "npm install axios react-dom react-router-dom react-scripts",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
